--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no testO specified\" && exit 1",
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "devDependencies": {
+    "@babel/plugin-transform-typescript": "^7.13.0",
+    "@babel/preset-typescript": "^7.13.0",
+    "typescript": "^4.2.4"
+  }
 }
