--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":"parcel index.html",
+    "build": "parcel index.html",
     "test": "echo \"Error: no testO specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/plugin-transform-typescript": "^7.13.0",
     "@babel/preset-typescript": "^7.13.0",
+    "parcel-bundler": "^1.12.5",
     "typescript": "^4.2.4"
   }
 }
